crates/tlang_parser/tests/snapshots/parser__block_expression.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = { 1 + 2; };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 10,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 8,
          kind: Block(Block(
            id: 9,
            statements: [
              Stmt(
                id: 4,
                kind: Expr(Expr(
                  id: 7,
                  kind: BinaryOp(BinaryOpExpression(
                    op: Add,
                    lhs: Expr(
                      id: 5,
                      kind: Literal(UnsignedInteger(1)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 10,
                        end: 11,
                        start_lc: LineColumn(
                          line: 0,
                          column: 10,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 11,
                        ),
                      ),
                    ),
                    rhs: Expr(
                      id: 6,
                      kind: Literal(UnsignedInteger(2)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 14,
                        end: 15,
                        start_lc: LineColumn(
                          line: 0,
                          column: 14,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 15,
                        ),
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 10,
                    end: 15,
                    start_lc: LineColumn(
                      line: 0,
                      column: 10,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 15,
                    ),
                  ),
                )),
                span: Span(
                  start: 10,
                  end: 16,
                  start_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 16,
                  ),
                ),
                leading_comments: [],
                trailing_comments: [],
              ),
            ],
            expression: None,
            span: Span(
              start: 8,
              end: 18,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 18,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 18,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 18,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 19,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 19,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 19,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 19,
    ),
  ),
)
