crates/tlang_parser/tests/snapshots/parser__call_with_expression.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"foo(1 + 2, 3);\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 9,
        kind: Call(CallExpression(
          callee: Expr(
            id: 4,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "foo",
                  span: Span(
                    start: 0,
                    end: 3,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 3,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 0,
                end: 3,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 3,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 3,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 3,
              ),
            ),
          ),
          arguments: [
            Expr(
              id: 7,
              kind: BinaryOp(BinaryOpExpression(
                op: Add,
                lhs: Expr(
                  id: 5,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 4,
                    end: 5,
                    start_lc: LineColumn(
                      line: 0,
                      column: 4,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 5,
                    ),
                  ),
                ),
                rhs: Expr(
                  id: 6,
                  kind: Literal(UnsignedInteger(2)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 8,
                    end: 9,
                    start_lc: LineColumn(
                      line: 0,
                      column: 8,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 9,
                    ),
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 4,
                end: 9,
                start_lc: LineColumn(
                  line: 0,
                  column: 4,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 9,
                ),
              ),
            ),
            Expr(
              id: 8,
              kind: Literal(UnsignedInteger(3)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 11,
                end: 12,
                start_lc: LineColumn(
                  line: 0,
                  column: 11,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 12,
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 13,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 13,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 14,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 14,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 14,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 14,
    ),
  ),
)
