crates/tlang_parser/tests/snapshots/parser__comments_can_appear_anywhere.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse!\n(r\"\n        // this is a third comment\n        let y = /* comment before expr */ 2 /* comment after expr */;\n        // trailing comment\n        [1,2] // trailing comment\n        |> foo // trailing comment\n        //|> bar\n        |> baz;\n        \")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 5,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "y",
            span: Span(
              start: 48,
              end: 49,
              start_lc: LineColumn(
                line: 2,
                column: 13,
              ),
              end_lc: LineColumn(
                line: 2,
                column: 14,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 48,
            end: 49,
            start_lc: LineColumn(
              line: 2,
              column: 13,
            ),
            end_lc: LineColumn(
              line: 2,
              column: 14,
            ),
          ),
        ),
        expression: Expr(
          id: 4,
          kind: Literal(UnsignedInteger(2)),
          leading_comments: [
            CommentToken(
              kind: MultiLine,
              text: " comment before expr ",
              span: Span(
                start: 52,
                end: 77,
                start_lc: LineColumn(
                  line: 2,
                  column: 17,
                ),
                end_lc: LineColumn(
                  line: 2,
                  column: 42,
                ),
              ),
            ),
          ],
          trailing_comments: [
            CommentToken(
              kind: MultiLine,
              text: " comment after expr ",
              span: Span(
                start: 80,
                end: 104,
                start_lc: LineColumn(
                  line: 2,
                  column: 45,
                ),
                end_lc: LineColumn(
                  line: 2,
                  column: 69,
                ),
              ),
            ),
          ],
          span: Span(
            start: 78,
            end: 79,
            start_lc: LineColumn(
              line: 2,
              column: 43,
            ),
            end_lc: LineColumn(
              line: 2,
              column: 44,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 44,
        end: 105,
        start_lc: LineColumn(
          line: 2,
          column: 9,
        ),
        end_lc: LineColumn(
          line: 2,
          column: 70,
        ),
      ),
      leading_comments: [
        CommentToken(
          kind: SingleLine,
          text: " this is a third comment",
          span: Span(
            start: 9,
            end: 35,
            start_lc: LineColumn(
              line: 1,
              column: 9,
            ),
            end_lc: LineColumn(
              line: 1,
              column: 35,
            ),
          ),
        ),
      ],
      trailing_comments: [],
    ),
    Stmt(
      id: 6,
      kind: Expr(Expr(
        id: 13,
        kind: BinaryOp(BinaryOpExpression(
          op: Pipeline,
          lhs: Expr(
            id: 11,
            kind: BinaryOp(BinaryOpExpression(
              op: Pipeline,
              lhs: Expr(
                id: 9,
                kind: List([
                  Expr(
                    id: 7,
                    kind: Literal(UnsignedInteger(1)),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: 143,
                      end: 144,
                      start_lc: LineColumn(
                        line: 4,
                        column: 10,
                      ),
                      end_lc: LineColumn(
                        line: 4,
                        column: 11,
                      ),
                    ),
                  ),
                  Expr(
                    id: 8,
                    kind: Literal(UnsignedInteger(2)),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: 145,
                      end: 146,
                      start_lc: LineColumn(
                        line: 4,
                        column: 12,
                      ),
                      end_lc: LineColumn(
                        line: 4,
                        column: 13,
                      ),
                    ),
                  ),
                ]),
                leading_comments: [],
                trailing_comments: [
                  CommentToken(
                    kind: SingleLine,
                    text: " trailing comment",
                    span: Span(
                      start: 148,
                      end: 167,
                      start_lc: LineColumn(
                        line: 4,
                        column: 15,
                      ),
                      end_lc: LineColumn(
                        line: 4,
                        column: 34,
                      ),
                    ),
                  ),
                ],
                span: Span(
                  start: 142,
                  end: 147,
                  start_lc: LineColumn(
                    line: 4,
                    column: 9,
                  ),
                  end_lc: LineColumn(
                    line: 4,
                    column: 14,
                  ),
                ),
              ),
              rhs: Expr(
                id: 10,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "foo",
                      span: Span(
                        start: 179,
                        end: 182,
                        start_lc: LineColumn(
                          line: 5,
                          column: 12,
                        ),
                        end_lc: LineColumn(
                          line: 5,
                          column: 15,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: 179,
                    end: 182,
                    start_lc: LineColumn(
                      line: 5,
                      column: 12,
                    ),
                    end_lc: LineColumn(
                      line: 5,
                      column: 15,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [
                  CommentToken(
                    kind: SingleLine,
                    text: " trailing comment",
                    span: Span(
                      start: 183,
                      end: 202,
                      start_lc: LineColumn(
                        line: 5,
                        column: 16,
                      ),
                      end_lc: LineColumn(
                        line: 5,
                        column: 35,
                      ),
                    ),
                  ),
                  CommentToken(
                    kind: SingleLine,
                    text: "|> bar",
                    span: Span(
                      start: 211,
                      end: 219,
                      start_lc: LineColumn(
                        line: 6,
                        column: 9,
                      ),
                      end_lc: LineColumn(
                        line: 6,
                        column: 17,
                      ),
                    ),
                  ),
                ],
                span: Span(
                  start: 179,
                  end: 182,
                  start_lc: LineColumn(
                    line: 5,
                    column: 12,
                  ),
                  end_lc: LineColumn(
                    line: 5,
                    column: 15,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 142,
              end: 219,
              start_lc: LineColumn(
                line: 4,
                column: 9,
              ),
              end_lc: LineColumn(
                line: 6,
                column: 17,
              ),
            ),
          ),
          rhs: Expr(
            id: 12,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "baz",
                  span: Span(
                    start: 231,
                    end: 234,
                    start_lc: LineColumn(
                      line: 7,
                      column: 12,
                    ),
                    end_lc: LineColumn(
                      line: 7,
                      column: 15,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 231,
                end: 234,
                start_lc: LineColumn(
                  line: 7,
                  column: 12,
                ),
                end_lc: LineColumn(
                  line: 7,
                  column: 15,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 231,
              end: 234,
              start_lc: LineColumn(
                line: 7,
                column: 12,
              ),
              end_lc: LineColumn(
                line: 7,
                column: 15,
              ),
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 142,
          end: 234,
          start_lc: LineColumn(
            line: 4,
            column: 9,
          ),
          end_lc: LineColumn(
            line: 7,
            column: 15,
          ),
        ),
      )),
      span: Span(
        start: 142,
        end: 235,
        start_lc: LineColumn(
          line: 4,
          column: 9,
        ),
        end_lc: LineColumn(
          line: 7,
          column: 16,
        ),
      ),
      leading_comments: [
        CommentToken(
          kind: SingleLine,
          text: " trailing comment",
          span: Span(
            start: 114,
            end: 133,
            start_lc: LineColumn(
              line: 3,
              column: 9,
            ),
            end_lc: LineColumn(
              line: 3,
              column: 28,
            ),
          ),
        ),
      ],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 9,
    end: 235,
    start_lc: LineColumn(
      line: 1,
      column: 9,
    ),
    end_lc: LineColumn(
      line: 7,
      column: 16,
    ),
  ),
)
