crates/tlang_parser/tests/snapshots/parser__dictionary_literal.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse!(r#\"let x = { foo: 1, bar: 2 };\"#)"
---
Node(
  ast_node: Legacy(Module([
    Node(
      ast_node: Legacy(VariableDeclaration(
        id: SymbolId(2),
        pattern: Pattern(
          kind: Identifier(
            id: SymbolId(1),
            name: Ident(
              name: "x",
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 4,
                ),
                end: LineColumn(
                  line: 0,
                  column: 5,
                ),
              ),
            ),
          ),
          span: Span(
            start: LineColumn(
              line: 0,
              column: 4,
            ),
            end: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          kind: Dict([
            (Expr(
              kind: Identifier(Ident(
                name: "foo",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              )),
              symbol_table: None,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 10,
                ),
                end: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            ), Expr(
              kind: Literal(Integer(1)),
              symbol_table: None,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end: LineColumn(
                  line: 0,
                  column: 16,
                ),
              ),
            )),
            (Expr(
              kind: Identifier(Ident(
                name: "bar",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 21,
                  ),
                ),
              )),
              symbol_table: None,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 18,
                ),
                end: LineColumn(
                  line: 0,
                  column: 21,
                ),
              ),
            ), Expr(
              kind: Literal(Integer(2)),
              symbol_table: None,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 23,
                ),
                end: LineColumn(
                  line: 0,
                  column: 24,
                ),
              ),
            )),
          ]),
          symbol_table: None,
          span: Span(
            start: LineColumn(
              line: 0,
              column: 8,
            ),
            end: LineColumn(
              line: 0,
              column: 26,
            ),
          ),
        ),
        type_annotation: None,
      )),
      symbol_table: None,
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 27,
        ),
      ),
    ),
  ])),
  symbol_table: None,
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 0,
    ),
  ),
)
