crates/tlang_parser/tests/snapshots/parser__dynamic_index_access-2.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = foo[1][2];\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 9,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 8,
          kind: IndexExpression(IndexAccessExpression(
            base: Expr(
              id: 6,
              kind: IndexExpression(IndexAccessExpression(
                base: Expr(
                  id: 4,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "foo",
                        span: Span(
                          start: 8,
                          end: 11,
                          start_lc: LineColumn(
                            line: 0,
                            column: 8,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 11,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 8,
                      end: 11,
                      start_lc: LineColumn(
                        line: 0,
                        column: 8,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 11,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 8,
                    end: 11,
                    start_lc: LineColumn(
                      line: 0,
                      column: 8,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 11,
                    ),
                  ),
                ),
                index: Expr(
                  id: 5,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 12,
                    end: 13,
                    start_lc: LineColumn(
                      line: 0,
                      column: 12,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 13,
                    ),
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 0,
                end: 0,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
              ),
            ),
            index: Expr(
              id: 7,
              kind: Literal(UnsignedInteger(2)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 15,
                end: 16,
                start_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 16,
                ),
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 17,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 17,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 18,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 18,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 18,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 18,
    ),
  ),
)
