crates/tlang_parser/tests/snapshots/parser__dynamic_index_access.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = foo[1];\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 7,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: LineColumn(
                line: 0,
                column: 4,
              ),
              end: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 4,
            ),
            end: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 6,
          kind: IndexExpression(IndexAccessExpression(
            base: Expr(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "foo",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 8,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 11,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 11,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 8,
                ),
                end: LineColumn(
                  line: 0,
                  column: 11,
                ),
              ),
            ),
            index: Expr(
              id: 5,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 12,
                ),
                end: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 8,
            ),
            end: LineColumn(
              line: 0,
              column: 14,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 15,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 15,
    ),
  ),
)
