crates/tlang_parser/tests/snapshots/parser__exponentiation-2.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"1 ** 2 * 3;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 8,
        kind: BinaryOp(BinaryOpExpression(
          op: Mul,
          lhs: Expr(
            id: 6,
            kind: BinaryOp(BinaryOpExpression(
              op: Exp,
              lhs: Expr(
                id: 4,
                kind: Literal(UnsignedInteger(1)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 1,
                  ),
                ),
              ),
              rhs: Expr(
                id: 5,
                kind: Literal(UnsignedInteger(2)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 5,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
          rhs: Expr(
            id: 7,
            kind: Literal(UnsignedInteger(3)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 9,
              ),
              end: LineColumn(
                line: 0,
                column: 10,
              ),
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: LineColumn(
            line: 0,
            column: 0,
          ),
          end: LineColumn(
            line: 0,
            column: 10,
          ),
        ),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 11,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 11,
    ),
  ),
)
