crates/tlang_parser/tests/snapshots/parser__field_access_expressions-2.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"foo.bar.baz;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 6,
        kind: FieldExpression(FieldAccessExpression(
          base: Expr(
            id: 5,
            kind: FieldExpression(FieldAccessExpression(
              base: Expr(
                id: 4,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "foo",
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 0,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 3,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 3,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 0,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                ),
              ),
              field: Ident(
                name: "bar",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 4,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 0,
              ),
              end: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ),
          field: Ident(
            name: "baz",
            span: Span(
              start: LineColumn(
                line: 0,
                column: 8,
              ),
              end: LineColumn(
                line: 0,
                column: 11,
              ),
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: LineColumn(
            line: 0,
            column: 0,
          ),
          end: LineColumn(
            line: 0,
            column: 11,
          ),
        ),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 12,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 12,
    ),
  ),
)
